# qfl

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: dependencies.py  main.py  middleware.py  schemas.py
api/routes/: audit.py  status.py  train.py
benchmarks/: fl_benchmark.py  privacy_budget_analysis.py
core/federated/: aggregation.py  coordinator.py
core/privacy/: audit.py  conformal.py  differential.py
core/quantum/: circuits.py  hardware.py  simulator.py
docker/: Dockerfile.client  Dockerfile.coordinator
docs/: api-reference.md  architecture.md  deployment.md  security.md  tutorial.md
infra/backup/: backup.sh  restore.sh
infra/helm/coordinator/: Chart.yaml  values.yaml
infra/monitoring/: prometheus.yml
infra/networkpolicies/: tenant-isolation.yaml
infra/nginx/: nginx.conf
infra/postgres/: init.sql
paper/: ibm_quantum_network_application.md  main.tex  references.bib
paper/arxiv_submission/: arxiv_metadata.txt
paper/figures/: plot_results.py  tables.tex
sdk/qfl_client/: __init__.py  client.py
tests/: conftest.py
tests/integration/: test_api.py
tests/quantum/: test_coordinator.py  test_coverage_boost.py  test_quantum_coverage.py
tests/unit/: test_aggregation.py  test_audit.py  test_circuits.py  test_conformal.py  test_differential_privacy.py  test_hardware.py  test_middleware.py  test_middleware_ratelimit.py  test_schemas.py  test_sdk.py  test_simulator.py
