[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "sdk"]

[project]
name = "qfl-platform"
version = "0.1.0"
description = "Quantum Federated Learning Platform — EU-compliant, production-ready QFL framework"
authors = [{ name = "Ali Pourrahim", email = "ali.pourrahim@centria.fi" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Quantum
    "qiskit>=1.1.0",
    "qiskit-aer>=0.14.0",
    "qiskit-ibm-runtime>=0.24.0",
    # ML / FL
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "opacus>=1.4.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    # Infra
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    # HTTP client (SDK)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "black>=24.4.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
qfl-coordinator = "api.main:run"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=api --cov=core --cov=sdk --cov-report=term-missing --cov-report=xml -v"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
omit = ["tests/*", "paper/*", "benchmarks/*", "infra/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def run\\(\\)",
]
